src/test/ui/did_you_mean/bad-assoc-pat.stderr
error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-pat.rs:13:9
   |
13 |         [u8]::AssocItem => {}
   |         ^^^^^^^^^^^^^^^ help: try: `<[u8]>::AssocItem`

error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-pat.rs:16:9
   |
16 |         (u8, u8)::AssocItem => {}
   |         ^^^^^^^^^^^^^^^^^^^ help: try: `<(u8, u8)>::AssocItem`

error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-pat.rs:19:9
   |
19 |         _::AssocItem => {}
   |         ^^^^^^^^^^^^ help: try: `<_>::AssocItem`

error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-pat.rs:24:10
   |
24 |         &(u8,)::AssocItem => {}
   |          ^^^^^^^^^^^^^^^^ help: try: `<(u8,)>::AssocItem`

error[E0599]: no associated item named `AssocItem` found for type `[u8]` in the current scope
  --> $DIR/bad-assoc-pat.rs:13:9
   |
13 |         [u8]::AssocItem => {}
   |         ^^^^^^^^^^^^^^^ associated item not found in `[u8]`

error[E0599]: no associated item named `AssocItem` found for type `(u8, u8)` in the current scope
  --> $DIR/bad-assoc-pat.rs:16:9
   |
16 |         (u8, u8)::AssocItem => {}
   |         ^^^^^^^^^^^^^^^^^^^ associated item not found in `(u8, u8)`

error[E0599]: no associated item named `AssocItem` found for type `_` in the current scope
  --> $DIR/bad-assoc-pat.rs:19:9
   |
19 |         _::AssocItem => {}
   |         ^^^^^^^^^^^^ associated item not found in `_`

error[E0599]: no associated item named `AssocItem` found for type `(u8,)` in the current scope
  --> $DIR/bad-assoc-pat.rs:24:10
   |
24 |         &(u8,)::AssocItem => {}
   |          ^^^^^^^^^^^^^^^^ associated item not found in `(u8,)`

error: aborting due to 8 previous errors

